fix: codesmells