@@ -36,7 +36,7 @@ public class ChaveModelV2 extends AbstractModel {
                     .filter(chave -> chave.getDataInclusao() != null &&
                             !chave.getDataInclusao().isBefore(inclusaoComeco) &&
                             !chave.getDataInclusao().isAfter(inclusaoFinal))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         if (filtro.getDataInativacao() != null) {
             LocalDateTime inativacaoComeco = filtro.getDataInativacao();
@@ -46,7 +46,7 @@ public class ChaveModelV2 extends AbstractModel {
                     .filter(chave -> chave.getDataInativacao() != null &&
                             !chave.getDataInativacao().isBefore(inativacaoComeco) &&
                             !chave.getDataInativacao().isAfter(inativacaoFinal))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return chaves;
     }
